Add nullcheck on typeToDraft conversion and simplify transformation logic